// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionHeader should render correctly buy trade 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
      },
      undefined,
    ]
  }
>
  <test-file-stub
    fill="#05A85A"
    style={
      [
        {
          "height": 56,
          "width": 56,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "fontFamily": "Baloo2-Bold",
            "fontSize": 24,
            "letterSpacing": 0.24,
            "lineHeight": 32,
          },
        ]
      }
    >
      stacked sats
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FEEDE5",
          "borderColor": "#FCCCB6",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "height": 28,
          "justifyContent": "center",
          "opacity": 1,
          "paddingLeft": 10,
          "paddingRight": 10,
        }
      }
    >
      <Text
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "color": "#2B1911",
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 14,
                "letterSpacing": 0.5,
                "lineHeight": 24,
                "textAlign": "center",
                "textTransform": "uppercase",
              },
            ],
          ]
        }
      >
        PC‑7B‑1C8
      </Text>
      <test-file-stub
        fill="#F56522"
        style={
          [
            {
              "height": 24,
              "width": 24,
            },
            {
              "height": 16,
              "width": 16,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`TransactionHeader should render correctly for a funding escrow transaction with contract id 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
      },
      undefined,
    ]
  }
>
  <test-file-stub
    fill="#F56522"
    style={
      [
        {
          "height": 56,
          "width": 56,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "fontFamily": "Baloo2-Bold",
            "fontSize": 24,
            "letterSpacing": 0.24,
            "lineHeight": 32,
          },
        ]
      }
    >
      funded escrow
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FEEDE5",
          "borderColor": "#FCCCB6",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "height": 28,
          "justifyContent": "center",
          "opacity": 1,
          "paddingLeft": 10,
          "paddingRight": 10,
        }
      }
    >
      <Text
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "color": "#2B1911",
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 14,
                "letterSpacing": 0.5,
                "lineHeight": 24,
                "textAlign": "center",
                "textTransform": "uppercase",
              },
            ],
          ]
        }
      >
        PC‑7B‑1C8
      </Text>
      <test-file-stub
        fill="#F56522"
        style={
          [
            {
              "height": 24,
              "width": 24,
            },
            {
              "height": 16,
              "width": 16,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`TransactionHeader should render correctly for a funding escrow transaction with offer id 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
      },
      undefined,
    ]
  }
>
  <test-file-stub
    fill="#F56522"
    style={
      [
        {
          "height": 56,
          "width": 56,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "fontFamily": "Baloo2-Bold",
            "fontSize": 24,
            "letterSpacing": 0.24,
            "lineHeight": 32,
          },
        ]
      }
    >
      funded escrow
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FEEDE5",
          "borderColor": "#FCCCB6",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "height": 28,
          "justifyContent": "center",
          "opacity": 1,
          "paddingLeft": 10,
          "paddingRight": 10,
        }
      }
    >
      <Text
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "color": "#2B1911",
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 14,
                "letterSpacing": 0.5,
                "lineHeight": 24,
                "textAlign": "center",
                "textTransform": "uppercase",
              },
            ],
          ]
        }
      >
        P‑7B
      </Text>
      <test-file-stub
        fill="#F56522"
        style={
          [
            {
              "height": 24,
              "width": 24,
            },
            {
              "height": 16,
              "width": 16,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`TransactionHeader should render correctly for a receiving transaction 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
      },
      undefined,
    ]
  }
>
  <test-file-stub
    fill="#05A85A"
    style={
      [
        {
          "height": 56,
          "width": 56,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "fontFamily": "Baloo2-Bold",
            "fontSize": 24,
            "letterSpacing": 0.24,
            "lineHeight": 32,
          },
        ]
      }
    >
      received to wallet
    </Text>
  </View>
</View>
`;

exports[`TransactionHeader should render correctly for a refund transaction 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
      },
      undefined,
    ]
  }
>
  <test-file-stub
    fill="#9F8C82"
    style={
      [
        {
          "height": 56,
          "width": 56,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "fontFamily": "Baloo2-Bold",
            "fontSize": 24,
            "letterSpacing": 0.24,
            "lineHeight": 32,
          },
        ]
      }
    >
      refunded
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#FEEDE5",
          "borderColor": "#FCCCB6",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "height": 28,
          "justifyContent": "center",
          "opacity": 1,
          "paddingLeft": 10,
          "paddingRight": 10,
        }
      }
    >
      <Text
        allowFontScaling={false}
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          [
            {
              "color": "#2B1911",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            [
              {
                "color": "#2B1911",
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 14,
                "letterSpacing": 0.5,
                "lineHeight": 24,
                "textAlign": "center",
                "textTransform": "uppercase",
              },
            ],
          ]
        }
      >
        PC‑7B‑1C8
      </Text>
      <test-file-stub
        fill="#F56522"
        style={
          [
            {
              "height": 24,
              "width": 24,
            },
            {
              "height": 16,
              "width": 16,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`TransactionHeader should render correctly for an outgoing transaction 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 16,
      },
      undefined,
    ]
  }
>
  <test-file-stub
    fill="#F56522"
    style={
      [
        {
          "height": 56,
          "width": 56,
        },
        undefined,
      ]
    }
  />
  <View
    style={
      {
        "alignItems": "flex-start",
      }
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          {
            "fontFamily": "Baloo2-Bold",
            "fontSize": 24,
            "letterSpacing": 0.24,
            "lineHeight": 32,
          },
        ]
      }
    >
      sent from wallet
    </Text>
  </View>
</View>
`;
